moved images, code cleaning

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 organize asssets in folders
+	list features in readme
 make pwa?
 	color scheme for grades on individual assignments?
 download and upload history and list of assignments
