--- a/TODO.txt
+++ b/TODO.txt
@@ -28,4 +28,12 @@ input verification
 organize js and rename html elms
 download csv of grade data for import/export
 focus top grade input upon click calc btn
-remove hover effect on grade item
+add popper for titles
+display if there are no assingments? vector graphic of no assingments here
+error messages in seperate display and different css, instead of in grade result display
+add email btn in info modal (eventually) for questions, or suggestions
+show toast or popper for visual confirmation that grade was copied
+display setting to hide copy btn (toggle switch)
+add animations to hover on btns
+setting for copy btn copyies letter, percentage, or both
+setting to display percentage as floating point without percent sign (ex. 0.876 instead of 87.6%)
